--- a/new-morning.css
+++ b/new-morning.css
@@ -16,9 +16,11 @@
 	--highlight-border-color: #b08c4f;
 }
 
-body {
-	scrollbar-color: rgba(0, 0, 0, 0.3) rgba(0, 0, 0, 0.05);
-	/* font-family: monospace; */
+/* Fix height on mobile do to auto-hide address bar */
+
+html, body {
+	position: fixed;
+	width: 100%;
 }
 
 /* General tweaks */
@@ -29,6 +31,7 @@ body {
 
 #chat .userlist {
 	font-weight: bold;
+	width: 250px;
 }
 
 .mentions-popup {
@@ -47,10 +50,6 @@ body {
 	min-width: 260px;
 	resize: horizontal;
 	overflow: hidden;
-}
-
-#chat .userlist {
-	width: 250px;
 }
 
 @media (max-width: 768px) {
@@ -75,6 +74,10 @@ body {
 	#viewport.menu-open #sidebar {
 		transform: translate3d(260px,0,0);
 	}
+
+	.container {
+		margin-bottom: 20px;
+   }
 }
 
 /* Adjust paddings to be more uniform */
@@ -94,33 +97,30 @@ body {
 
 /* Modern style */
 
-#chat .content,
-#chat .condensed-summary {
-	border-left: none;
-	display: block;
-}
-
 #chat .msg {
 	display: block;
-	padding: 10px 0 0;
+	padding: 10px 0 0 !important;
+	background: none !important;
+	border: none !important;
 }
 
-#chat .content,
-#chat .time,
-#chat .from {
-	padding-left: 0;
-}
-
-#chat .from {
-	width: auto;
-	padding-right: 5px;
-	-webkit-mask-image: none;
-	mask-image: none;
+#chat .content {
+	border: none !important;
+	padding: 0 !important;
+	display: block;
 }
 
 #chat .time {
 	font-size: 12px;
-	padding-right: 5px;
+	color: var(--body-color-muted) !important;
+	padding: 0 5px 0 0 !important;
+}
+
+#chat .from {
+	width: auto;
+	-webkit-mask-image: none;
+	mask-image: none;
+	padding: 0 5px 0 0 !important;
 }
 
 #chat .msg[data-from][data-type=message] .from {
@@ -134,7 +134,7 @@ body {
 }
 
 #chat .msg[data-from][data-type=message][class="msg previous-source"] {
-	padding-top: 0;
+	padding-top: 5px !important;
 }
 
 /* Condensed split/join message tweaks */
@@ -154,20 +154,18 @@ body {
 	color: var(--body-color-muted);
 }
 
-#chat .msg[data-type=condensed] {
-	font-size: 10px;	
-}
-
-#chat .msg[data-type=condensed] .msg {
-	padding-top: 3px;
+#chat .condensed-summary {
+	opacity: 75%;
+	font-size: 10px;
+	padding: 2px 0;
 }
 
 #chat .condensed-summary .time {
 	display: none;
 }
 
-#chat .condensed-summary {
-	opacity: 75%;
+#chat .msg[data-type=condensed] .msg {
+    padding: 3px 0 !important;
 }
 
 /* Tweak other messages */
@@ -188,35 +186,27 @@ body {
 	content: none;
 }
 
-#chat .msg .from:before {
-	display: none;
-	/* font-size: 10px !important; */
+#chat .from:after,
+#chat .from:before {
+	display: none !important;
 }
 
-#chat .chat-view[data-type="channel"] .msg.highlight {
-	background: none;
-	border-left: 0;
-	padding-left: 0;
-}
-
-#chat .chat-view[data-type="channel"] .msg.highlight .time {
-	padding-left: 0;
-	color: var(--body-color-muted);
-}
-
-#chat .chat-view[data-type="channel"] .msg.highlight .content {
-	border: 0;
+#chat .highlight .content {
 	font-weight: bolder;
 }
 
+#chat .msg[data-type=action] .content {
+    color: inherit;
+	font-style: italic;
+}
+
 #chat .toggle-content img {
-    max-width: 100%;
     max-height: 200px;
 }
 
 #image-viewer .open-btn {
-    right: 15px;
-    bottom: 15px;
+    right: 17px;
+    bottom: 17px;
     font-size: 20px;
 }
 
@@ -244,11 +234,16 @@ table {
 
 /* Tweak buttons and input fields */
 
-.btn:active, .btn:focus, .input:focus, .input:hover {
+.btn:active,
+.btn:focus,
+.input:focus,
+.input:hover {
 	box-shadow: 0px 0px 5px 0px rgb(0 0 0 / 25%);
 }
 
-.input, .input:focus, .input:hover {
+.input,
+.input:focus,
+.input:hover {
 	border: none;
 }
 
@@ -277,7 +272,8 @@ table {
 	color: rgba(255, 255, 255, 0.35);
 }
 
-.window h2, .window h3 {
+.window h2,
+.window h3 {
 	text-transform: capitalize;
 }
 
@@ -285,7 +281,7 @@ textarea.input[name="commands"] {
 	min-height: 77px;
 }
 
-::-webkit-resizer {
+#sidebar::-webkit-resizer {
 	display: none;
 }
 
@@ -293,15 +289,10 @@ textarea.input[name="commands"] {
 	padding: 30px;
 	margin: 0;
 }
- 
-@media (max-width: 479px) {
-	.container {
-		 margin-bottom: 20px;
-	}
-}
 
-#loading-reload-container p, #loading-reload-container button {
-	margin-bottom: 30px;
+#loading-reload-container p,
+#loading-reload-container button {
+	margin: 0 20px 30px;
 	text-align: center;
 }
 
@@ -338,7 +329,6 @@ input[type="search"]::-webkit-search-cancel-button {
 }
 
 /* Borders */
-#chat .content,
 #chat .header,
 #chat .user-mode::before,
 #chat .userlist {
