--- a/new-morning.css
+++ b/new-morning.css
@@ -17,31 +17,22 @@
 	--window-border-color: #28333d;
 }
 
-/* Light theme WIP 
-
-:root {
-    --body-color: #222;
-    --body-color-muted: #767676;
-    --link-color: #50a656;
-    --window-bg-color: #fff;
-    --window-heading-color: #454e4e;
-    --date-marker-color: rgba(0,107,59,0.5);
-    --unread-marker-color: rgba(231,76,60,0.5);
-    --highlight-bg-color: #efe8dc;
-    --highlight-border-color: #b08c4f;
-    --window-border-color: #cdd3da;
-}
-
-*/
-
 /* Fix height on mobile due to auto-hide address bar */
 
-html, body {
+html {
 	position: fixed;
 	width: 100%;
 }
 
 /* General layout */
+
+#viewport {
+	padding: 0 !important;
+}
+
+.window {
+	border-radius: 0;
+}
 
 #chat .chat {
 	padding: 10px 15px 15px;
@@ -51,15 +42,10 @@ html, body {
 	padding: 0;
 }
 
-#chat .msg:last-child {
-    margin-bottom: 0;
-    padding-bottom: 0;
-}
-
 #chat .show-more,
 #chat .date-marker,
 #chat .unread-marker {
-	margin: 6px 0;
+	margin: 12px 0;
     padding: 0;
 }
 
@@ -67,19 +53,18 @@ html, body {
 #chat-container #chat .msg .from,
 #chat-container #chat .msg .time,
 #chat-container #chat .msg .content {
-	padding-left: 0;
+	padding: 0;
 	border: none;
 	background: none;
 }
 
 #chat .msg {
 	display: block;
-	padding: 2px 0;
-	margin: 6px 0;
+	margin: 12px 0;
 }
 
 #chat-container #chat .msg .content {
-	padding: 3px 0;
+	margin: 3px 0;
 	color: inherit;
 }
 
@@ -106,6 +91,7 @@ html, body {
 
 #chat-container #chat .msg[data-from][data-type=message] .from {
 	font-size: 16px;
+	line-height: 14px;
 }
 
 #chat-container #chat .msg + .msg[data-from][data-type=message].previous-source .from,
@@ -114,7 +100,7 @@ html, body {
 }
 
 #chat-container #chat .msg + .msg[data-from][data-type=message].previous-source {
-	margin-top: -10px;
+	margin-top: -6px;
 }
 
 #chat-container #chat .msg[data-from][data-type=message] .content {
@@ -123,7 +109,9 @@ html, body {
 
 /* Condensed split/join message tweaks */
 
+#chat-container #chat .msg[data-type="error"],
 #chat-container #chat .msg[data-type="condensed"],
+#chat-container #chat .msg[data-type="condensed"] .condensed-summary,
 #chat-container #chat .msg[data-type="chghost"],
 #chat-container #chat .msg[data-type="away"],
 #chat-container #chat .msg[data-type="back"],
@@ -137,13 +125,12 @@ html, body {
 #chat-container #chat .msg[data-type="topic"],
 #chat-container #chat .msg[data-type="topic_set_by"] {
 	color: var(--body-color-muted);
-	font-size: 12px;
-	padding: 0;
+	font-size: 11px;
+	margin: 6px 0;
 }
 
-#chat-container #chat .msg[data-type="condensed"] .condensed-summary .content {
-	font-size: 10px;
-	padding: 0;
+#chat-container #chat .msg[data-type="condensed"] .condensed-summary {
+    display: block;
 }
 
 #chat-container #chat .msg[data-type="condensed"] .condensed-summary .time {
@@ -158,13 +145,13 @@ html, body {
 }
 
 #chat-container #chat .chat-view[data-type=lobby] .msg {
-	color: var(--body-color);
 	font-size: 14px;
-	padding: 0;
+	color: var(--body-color);
+	margin: 6px 0;
 }
 
 #chat-container #chat .msg .new-topic {
-	font-weight: bold;
+	font-weight: 600;
 	font-size: 14px;
 	color: var(--body-color);
 }
@@ -179,11 +166,24 @@ html, body {
 }
 
 #chat .msg .whois {
-	padding: 3px 0;
+	margin: 3px 0;
 }
 
-.chat-content .inline-channel {
-	font-weight: bold;
+.irc-monospace, code {
+    font-size: inherit;
+}
+
+#chat .msg[data-type=notice] .content .tooltipped:after {
+    content: "Notice";
+}
+
+#chat-container #chat .msg .content {
+    white-space: normal;
+}
+
+#chat-container #chat .msg:last-child {
+    margin-bottom: 0;
+    padding-bottom: 0;
 }
 
 /* Mention panel */
@@ -200,11 +200,11 @@ html, body {
 .mentions-popup .msg .content {
 	background: none;
 	border: none;
-    font-weight: bold;
 	padding: 0;
 }
 
-.mentions-popup .hide-all-mentions {
+.mentions-popup .hide-all-mentions,
+.mentions-popup .dismiss-all-mentions {
 	border-radius: 2px;
 	border: 0;
 	padding: 9px 17px;
@@ -212,7 +212,8 @@ html, body {
 
 /* Highlights */
 
-#chat-container #chat .chat-view:not([data-type=query]) .msg.highlight {
+#chat-container #chat .msg[data-type=invite].highlight,
+#chat-container #chat .chat-view[data-type=channel] .msg.highlight {
 	border-left: 7px solid var(--highlight-border-color);
 	padding-left: 8px;
 	margin-left: -15px;
@@ -252,12 +253,6 @@ td, th {
 	border: none;
 }
 
-.window .input,
-.window .input:focus,
-.window .input:hover {
-	border: 1px solid var(--window-border-color) !important;
-}
-
 ::-webkit-search-cancel-button {
 	-webkit-appearance: none;
 }
@@ -276,6 +271,10 @@ td, th {
 
 #connect .input[name="commands"] {
 	min-height: 77px;
+}
+
+.extra-help {
+    font-size: 0.7em !important;
 }
 
 /* Sidebar */
@@ -311,6 +310,17 @@ td, th {
 
 #sidebar::-webkit-resizer {
 	display: none;
+}
+
+#footer .icon {
+	border-radius: 5px;
+	margin: 5px;
+	height: 40px;
+	width: 40px;
+}
+
+#footer {
+	margin-bottom: 5px;
 }
 
 /* Sidebar icons */
@@ -363,15 +373,34 @@ td, th {
 }
 
 .header .topic {
-	white-space: nowrap;
+	white-space: pre;
 }
 
-#chat button.mentions,
-#chat button.menu,
+.header .title {
+	font-weight: 700;
+}
+
+#chat-container #chat button.mentions,
+#chat-container #chat button.menu,
 #viewport .lt,
-#viewport .rt {
+#viewport .rt,
+#chat-container #chat button.search,
+#chat-container #chat button.close {
 	margin-top: 0;
 	color: var(--window-heading-color);
+}
+
+#chat-container .message-search input {
+    background: var(--window-border-color);
+	margin: 0;
+	padding: 0 15px;
+	border-radius: 0;
+}
+
+#chat-container .message-search.opened .input-wrapper {
+	top: 45px;
+	height: 45px;
+	z-index: 2;
 }
 
 /* User list */
@@ -389,6 +418,10 @@ td, th {
 	background-color: var(--window-border-color);
 }
 
+#chat .userlist .names .user {
+    line-height: 1.7;
+}
+
 #chat .count::before {
 	color: var(--window-heading-color);
 }
@@ -396,7 +429,7 @@ td, th {
 /* Nicknames */
 #chat-container #chat .user {
 	color: #b4ddff;
-	font-weight: bold;
+	font-weight: 600;
 }
 
 #chat-container #chat.colored-nicks .user.color-1,
@@ -480,6 +513,17 @@ code,
 .irc-monospace {
 	background: var(--window-border-color);
 	color: var(--body-color);
+	white-space: pre-wrap;
+}
+
+/* Disable nick detection. Way too many false detections in big chat rooms */
+
+#chat-container #chat .msg[data-type=message] .content .user,
+#chat-container #chat .msg[data-type=notice] .content .user,
+#chat-container #chat .msg[data-type=action] .content .user:nth-of-type(1n+2) {
+	color: inherit;
+	pointer-events: none;
+	font-weight: inherit;
 }
 
 /* Message form */
@@ -528,6 +572,10 @@ kbd {
 	color: #99a2b4;
 }
 
+#chat .toggle-content.toggle-type-audio audio::-webkit-media-controls-enclosure {
+	border-radius: 0;
+}
+
 #image-viewer .open-btn:before {
 	right: 17px;
 	bottom: 17px;
@@ -565,20 +613,23 @@ kbd {
 
 	#chat .userlist {
 		transform: translateX(200px);
+		z-index: 1;
 	}
 
 	#footer {
-		height: 50px;
+		margin-bottom: 5px;
 	}
+}
 
-	#footer .icon {
-		border-radius: 5px;
+@media (max-width: 479px) {
+	#connect label {
+		width: auto;
 	}
+}
 
-	#footer button {
-		width: 50px;
-	}
+/* Decrease density for touch screens */
 
+@media (pointer: coarse) {
 	.channel-list-item {
 		padding: 10px 14px;
 	}
@@ -588,7 +639,11 @@ kbd {
 	}
 
 	#form {
-		min-height: 55px;
+		min-height: 50px;
+	}
+
+	#sidebar .jump-to-input:before {
+		line-height: 40px!important;
 	}
 
 	#sidebar .input {
@@ -596,8 +651,19 @@ kbd {
 		line-height: 40px;
 	}
 
-	.jump-to-input:before {
-		line-height: 40px!important;
+	#chat-container .message-search.opened .input-wrapper {
+		top: 55px;
+	}
+
+	.scroll-down-arrow {
+		width: 45px;
+		height: 45px;
+		line-height: 43px;
+	}
+
+	.scroll-down-arrow {
+		background: var(--window-bg-color) !important; /* Otherwise button gets stuck in active state on */
+		color: var(--button-color) !important;
 	}
 }
 
