--- a/new-morning.css
+++ b/new-morning.css
@@ -382,6 +382,10 @@ textarea#user-specified-css-input {
     align-items: center;
 }
 
+#chat table.channel-list .topic {
+	white-space: unset;
+}
+
 /* Login and loading screens */
 
 #loading-reload-container,
